@@ -11,6 +11,7 @@ import ovh.migmolrod.food.ordering.system.restaurant.service.domain.entity.Produ
 import ovh.migmolrod.food.ordering.system.restaurant.service.domain.entity.Restaurant;
 
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class RestaurantDataMapper {
@@ -28,7 +29,7 @@ public class RestaurantDataMapper {
 												.productId(product.getId())
 												.quantity(product.getQuantity())
 												.build())
-										.toList())
+										.collect(Collectors.toList()))
 						.totalAmount(new Money(restaurantApprovalRequest.getPrice()))
 						.orderStatus(OrderStatus.valueOf(restaurantApprovalRequest.getRestaurantOrderStatus().name()))
 						.build())
